--- a/templates/index.html
+++ b/templates/index.html
@@ -70,28 +70,48 @@
      </div>
      <div class=catalogo>
       <div class="pcard">
-        <img src="{{ url_for('static', filename='img/camisa1.jpeg') }}" alt="">
-        <span>Camisa Drink White</span>
+        <div class="img-box">
+          <img class=frente src="{{ url_for('static', filename='img/camisa1.jpeg') }}" alt="">
+          <img class="costas" src="{{ url_for('static', filename='img/camisa1frente.jpeg') }}" alt="">
+          <span>Camisa Drink White</span>
+        </div>
       </div>
       <div class="pcard">
-        <img src="{{ url_for('static', filename='img/camisa2.jpeg') }}">
+        <div class="img-box">
+          <img class=frente src="{{ url_for('static', filename='img/camisa2.jpeg') }}" alt="">
+          <img class="costas" src="{{ url_for('static', filename='img/camisa2frente.jpeg') }}" alt="">
         <span>Camisa Drink Black</span>
+        </div>
       </div>
       <div class="pcard">
-        <img src="{{ url_for('static', filename='img/camisa3.jpeg') }}">
+        <div class="img-box">
+          <img class=frente src="{{ url_for('static', filename='img/camisa3.jpeg') }}" alt="">
+          <img class="costas" src="{{ url_for('static', filename='img/camisa3frente.jpeg') }}" alt="">alt="">
         <span>Camisa Fear Hades Black</span>
+        </div>
       </div>
       <div class="pcard">
-        <img src="{{ url_for('static', filename='img/camisa4.jpeg') }}">
+        <div class="img-box">
+          <img class=frente src="{{ url_for('static', filename='img/camisa4.jpeg') }}" alt="">
+          <img class="costas" src="{{ url_for('static', filename='img/camisa4frente.jpeg') }}" alt="">
         <span>Camisa Zeus</span>
+        </div>
       </div>
       <div class='pcard'>
-        <img src="{{ url_for('static', filename='img/camisa5.jpeg') }}">
+        <div class="img-box">
+          <img class=frente src="{{ url_for('static', filename='img/camisa5.jpeg') }}" alt="">
+          <img class="costas" src="{{ url_for('static', filename='img/camisa5frente.jpeg') }}" alt=""> alt="">
         <span>Crazy Money Boss</span>
+        </div>
       </div>
       <div class="pcard">
-        <img src="{{ url_for('static', filename='img/camisa6.jpeg') }}">
+        <div class="img-box">
+          <img class=frente src="{{ url_for('static', filename='img/camisa6.jpeg') }}" alt="">
+          <img class="costas" src="{{ url_for('static', filename='img/camisa6frente.jpeg') }}" alt="">
         <span>Money Boss White</span>
+        </div>
+      </div>
+
       </div>
 
      
