--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,14 @@
   /* opcional: mantém “fixo” ao rolar */
   background-attachment: scroll, scroll;
 }
+/* Sobrescreve o dark mode do sistema */
+@media (prefers-color-scheme: dark) {
+  body{
+    background: linear-gradient(to bottom, #111, #f2f2f2);
+    background-color: #111;
+    color: #111;
+  }
+}
 .navbar{
     display: flex;
     height: 100px;
